NIFI-15567 Set consistent usage of Map and ParameterContext classes